Cambio de imagen
Cambio de imagen al juego de 2048 de Gabriele Cirulli

--- a/index.html
+++ b/index.html
@@ -33,14 +33,10 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
-      <a class="restart-button">New Game</a>
+      <p class="game-intro">Une los numeros hasta formar <strong>2048 ヾ(⌐■_■)ノ </strong></p>
+      <a class="restart-button">Nuevo juego</a>
     </div>
 
-    <div class="app-notice">
-      <span class="notice-close-button">x</span>
-      <p><strong class="important">New:</strong> Get the new 2048 app for <a href="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805" target="_blank">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.gabrielecirulli.app2048" target="_blank">Android!</a></p>
-    </div>
 
     <div class="game-container">
       <div class="game-message">
@@ -100,15 +96,15 @@
     </div>
 
     <p class="game-explanation">
-      <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
+      <strong class="important">¿Y como le hago?:</strong> Use las <strong>flechas</strong> pa' mover los cuadritos. Cuando los cuadritos se toquen algo mágico pasara<strong> ( ͡° ͜ʖ ͡°) Olle ke riko</strong>
     </p>
     <hr>
     <p>
-    <strong class="important">Note:</strong> The game on <a href="http://git.io/2048">this site</a> is the original version of 2048. Apps for <a href="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805" target="_blank">iOS</a> and <a href="https://play.google.com/store/apps/details?id=com.gabrielecirulli.app2048" target="_blank">Android</a> are also available. Other versions are derivatives or fakes, and should be used with caution.
+    <strong class="important">Nota: </strong> El juego en este <a href="http://git.io/2048">Sitio</a> es la version piratilla de 2048. Aplicacion para <a href="https://itunes.apple.com/us/app/2048-by-gabriele-cirulli/id868076805" target="_blank">iOS</a> y para <a href="https://play.google.com/store/apps/details?id=com.gabrielecirulli.app2048" target="_blank">Android</a> tambien estan disponibles. Otras versiones al igual que esta son piratas, así que aguas.
     </p>
     <hr>
     <p>
-    Created by <a href="http://gabrielecirulli.com" target="_blank">Gabriele Cirulli.</a> Based on <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">1024 by Veewo Studio</a> and conceptually similar to <a href="http://asherv.com/threes/" target="_blank">Threes by Asher Vollmer.</a>
+    Creado por <a href="http://gabrielecirulli.com" target="_blank">Pingy el guapo.</a> Basado en <a href="https://itunes.apple.com/us/app/1024!/id823499224" target="_blank">2048 de Gabriele Cirulli</a> y similarmente a <a href="http://asherv.com/threes/" target="_blank">( ͡° ͜ʖ ͡°) </a>
     </p>
     <div class="sharing">
       <a href="https://twitter.com/share" class="twitter-share-button" data-text="Check out 2048, a game where you join numbers to score high! #2048game" data-via="gabrielecirulli" data-url="http://git.io/2048" data-counturl="http://gabrielecirulli.github.io/2048/">Tweet</a>
@@ -117,13 +113,13 @@
       <form class="pp-donate" action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
         <input type="hidden" name="cmd" value="_s-xclick">
         <input type="hidden" name="hosted_button_id" value="NVNPJLTBZ8AME">
-        <button name="submit"><img src="meta/icon_pp.svg">Donate</button>
+        <button name="submit"><img src="meta/icon_pp.svg">[̲̅$̲̅(̲̅ ͡° ͜ʖ ͡°̲̅)̲̅$̲̅]</button>
         <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
       </form>
 
       <span class="btc-donate">
         <a href="bitcoin:1Ec6onfsQmoP9kkL3zkpB6c5sA4PVcXU2i">
-          <img src="meta/icon_bitcoin.svg">Donate BTC
+          <img src="meta/icon_bitcoin.svg">$ Oxxo
         </a>
         <span class="address"><code>1Ec6onfsQmoP9kkL3zkpB6c5sA4PVcXU2i</code></span>
       </span>
